2013-08-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* lib/window.py: Added a menu item of 'Clear Tab' on tab labels.
	  Added a menu item of 'Clear All Tabs' on the menu bar.
	* po/nl_NL.po: Updated Dutch translation.  Thanks Heimen Stoffels!

2013-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/urlget.py: Fixed a problem that is caused in Twisted 13.1.
	  (issue #57).

2013-07-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added support for inserting all @users when
	  replying (issue #56).
	* it_IT.po: Updated Italian translation.  Thanks Gianvito Cavasoli!
	* de_DE.po: Updated German translation.  Thanks t_bb_ & _popopopoon_!

2013-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py: Added support for the system font setting (issue #36).
	* twitter/output.py (TwitterOutputBase): Added checking user
	  account for sending events to reply tabs (issue #46).

2013-07-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for the system font setting.

2013-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.3.1 release.
	* tweetentry.py: Fixed a twitter event entry bug.
	* NEWS: 2.3 release.

2013-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ca.po: Added new Catalan translation.  Thanks Adolfo Jayme!

2013-06-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedView): Fixed a box object bug.

2013-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* gfeedline.glade: Set the application icon for wnck taskbar
	  (issue #51).

2013-06-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py (NotebookTabLabel): Fixed a feedview objects lost
	  problem (issue #50).
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* window.py: Fixed feedview objects lost problems.
	* menu.py: Fixed a Twitter User TimeLine option for the profile.
